hphp/test/slow/protected_internal/property_protected_internal_visibility.php.expectf

Warning: Accessing internal property A::$foo in module M1 from module M2 is not allowed in %s on line 8

Fatal error: Cannot access protected property A::$foo in %s on line 8
